--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <i class='bx bx-sun sun'></i>
                 </div>
                         <!-- Hier ist der Login-Button -->
-                        <button href="src/Login" id="loginButton">Login</button>
+                        <button href="src/Login/" id="loginButton">Login</button>
                     </div>
                 </div>
             </div>
