--- a/src/Login/index.html
+++ b/src/Login/index.html
@@ -36,7 +36,7 @@
 
          <button type="button" class="login__button" >Login</button>
 
-         <div class="login__register"> Sie haben noch kein Konto? <a href="/src/Registrieren">Registrieren</a>
+         <div class="login__register"> Sie haben noch kein Konto? <a href="/site/src/Registrieren">Registrieren</a>
          </div>
          <div id="error-message" class="error-message"></div>
       </form>
