--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- ===== Google Font Import - Poppins ===== -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap">
 
     <link rel="stylesheet" href="style.css">
 
-    <!-- ===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
-    <title>Responsive Navigation Menu Bar</title>
+    <title>Start</title>
 </head>
 <body>
     <nav>
@@ -25,7 +22,7 @@
             <div class="menu">
                 <div class="logo-toggle">
                     <span class="logo"><a href="#">CodingLab</a></span>
-                    <i class='bx bx-x siderbarClose'></i>
+                    <i class='bx bx-x sidebarClose'></i>
                 </div>
 
                 <ul class="nav-links">
@@ -42,76 +39,15 @@
                     <i class='bx bx-moon moon'></i>
                     <i class='bx bx-sun sun'></i>
                 </div>
-                        <!-- Hier ist der Login-Button -->
-                        <button class="login-button" id="loginButton">Login</button>
-                    </div>
-                </div>
+
+                <button class="login-button" id="loginButton">Login</button>
+                
+                <button style="display: none;" class="logout-button" id="logoutButton">Logout</button>
             </div>
         </div>
     </nav>
 
-    <script>
-        const body = document.querySelector("body");
-const nav = document.querySelector("nav");
-const modeToggle = document.querySelector(".dark-light");
-const sidebarOpen = document.querySelector(".sidebarOpen");
-const sidebarClose = document.querySelector(".siderbarClose");
-const menu = document.querySelector(".menu");
-
-let getMode = localStorage.getItem("mode");
-if (getMode && getMode === "dark-mode") {
-    body.classList.add("dark");
-}
-
-// js code to toggle dark and light mode
-modeToggle.addEventListener("click", () => {
-    modeToggle.classList.toggle("active");
-    body.classList.toggle("dark");
-
-    // js code to keep user selected mode even page refresh or file reopen
-    if (!body.classList.contains("dark")) {
-        localStorage.setItem("mode", "light-mode");
-    } else {
-        localStorage.setItem("mode", "dark-mode");
-    }
-});
-
-// js code to toggle sidebar
-sidebarOpen.addEventListener("click", () => {
-    if (window.innerWidth <= 790) {
-        // Öffne das Menü im Media-Query-Modus
-        menu.style.left = "0";
-    } else {
-        nav.classList.add("active");
-    }
-});
-
-sidebarClose.addEventListener("click", () => {
-    if (window.innerWidth <= 790) {
-        // Schließe das Menü im Media-Query-Modus
-        menu.style.left = "-100%";
-    } else {
-        nav.classList.remove("active");
-    }
-});
-
-body.addEventListener("click", (e) => {
-    let clickedElm = e.target;
-
-    if (!clickedElm.classList.contains("sidebarOpen") && !clickedElm.classList.contains("menu")) {
-        if (window.innerWidth <= 790) {
-            // Schließe das Menü im Media-Query-Modus
-            menu.style.left = "-100%";
-        } else {
-            nav.classList.remove("active");
-        }
-    }
-});
-
-document.getElementById("loginButton").addEventListener("click", function() {
-        // Hier setzt du die URL ein, zu der du weiterleiten möchtest
-        window.location.href = "src/Login/";
-    });
-    </script>
+    <script src="script.js"></script>
+</body>
 </body>
 </html>
