--- a/Login.html
+++ b/Login.html
@@ -39,21 +39,36 @@
 
         <script>
             // Lese den Anmeldestatus aus dem Local Storage
-            const isLoggedIn = localStorage.getItem("isLoggedIn") === "true";
-            const loginButton = document.querySelector(".login__button");
+    const isLoggedIn = localStorage.getItem("isLoggedIn") === "true";
+    const loginForm = document.getElementById("loginForm");
+    const loginButton = document.querySelector(".login__button");
+    const errorMessage = document.getElementById("error-message");
 
-            // Verstecke oder zeige den Logout-Button basierend auf dem Anmeldestatus
-            if (isLoggedIn) {
-                loginButton.style.display = "none";
-            } else {
-                loginButton.style.display = "block";
-            }
+    // Verstecke oder zeige den Logout-Button basierend auf dem Anmeldestatus
+    if (isLoggedIn) {
+        loginButton.style.display = "none";
+    } else {
+        loginButton.style.display = "block";
+    }
 
-            // Setze den Anmeldestatus beim Laden der Seite
-            loginButton.addEventListener("click", function () {
-                localStorage.setItem("isLoggedIn", "true");
-                loginButton.style.display = "none";
-            });
+    // Setze den Anmeldestatus beim Laden der Seite
+    loginForm.addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent the default form submission
+
+        // Hier sollte die Logik für die Überprüfung der Anmeldedaten stattfinden
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        // Beispiel: Überprüfe, ob die Anmeldedaten korrekt sind
+        if (email === "example@example.com" && password === "pass123") {
+            localStorage.setItem("isLoggedIn", "true");
+            loginButton.style.display = "none";
+            errorMessage.innerHTML = ""; // Clear any previous error message
+        } else {
+            // Zeige eine Fehlermeldung
+            errorMessage.innerHTML = "Incorrect email or password. Please try again.";
+        }
+    });
         </script>
     </div>
 </body>
