--- a/scr/Login/logout/Max/index.html
+++ b/scr/Login/logout/Max/index.html
@@ -41,7 +41,7 @@
                     <p>Help & Support</p>
                     <span>></span>
                 </a>
-                <a href="/Users/Max/Desktop/Start" class="sub-menu-link">
+                <a href="/" class="sub-menu-link">
                     <img src="images/logout.png">
                     <p>Logout</p>
                     <span>></span>
