--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nav</title>
-    <link rel="stylesheet" href="css & js/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Profilauswahl</title>
 </head>
 <body>
-    <div class="hero">
-        <nav>
-            <h1 class="logo">Logo</h1>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="scr/Login/index.html">Login</a></li>
-            </ul>
-             </div>
-            </div>
+  <h1>Wer schaut gerade zu</h1>
 
-        </nav>
+  <div class="profile-container">
+    <div class="profile-card" onclick="selectProfile('profile1')">
+      <img src="profile1.png" alt="Profile 1">
+      <p>Max</p>
     </div>
+    <div class="profile-card" onclick="selectProfile('profile2')">
+      <img src="profile2.png" alt="Profile 2">
+      <p>Milo</p>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
