--- a/Max/index.html
+++ b/Max/index.html
@@ -33,11 +33,18 @@
                         <li>Full Stack JavaScript</li>
                         <li>Python Development</li>
                         <li>Data Analysis</li>
-                        <li src="/">Konto Wechseln</li>
+                        <li onclick="redirectToNewAccount()">Konto Wechseln</li>
                     </ul>
                 </li>
             </ul>
         </div>     
+
+        <script>
+            function redirectToNewAccount() {
+                window.location.href = "/";
+            }
+        </script>
+        
 
     </nav>
 
