--- a/Max/index.html
+++ b/Max/index.html
@@ -41,7 +41,7 @@
 
         <script>
             function redirectToNewAccount() {
-                window.location.href = "/";
+                window.location.href = "/site/";
             }
         </script>
         
