--- a/Max/index.html
+++ b/Max/index.html
@@ -15,7 +15,7 @@
         <ul class="nav-links">
             
             <i class="fa fa-home" style="color: #fff; margin-right: -16px; margin-left: 25px;"></i>
-            <li class="nav-items"><a href="/site/">Home</a></li>
+            <li class="nav-items"><a href="/site/Max/">Home</a></li>
 
             <i class="fa fa-film" style="color: #fff; margin-right: -16px; margin-left: 25px;"></i>
             <li class="nav-items"><a href="#">Filme</a></li>
