--- a/Milo/index.html
+++ b/Milo/index.html
@@ -22,11 +22,15 @@
                 <img src="assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
+            <a>
+                <img src="assets/images/series-icon.svg" alt="SERIES" />
+                <span>SERIES</span>
+            </a>
         </div>
         <div class="signOut">
             <img class="userImg" src="assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
-                <a href="../index.html">Konto Wechseln</a>
+                <a href="../index.html"> Konto Wechseln </a>
             </div>
         </div>
     </nav>
