--- a/Milo/index.html
+++ b/Milo/index.html
@@ -18,15 +18,17 @@
                 <img src="assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
-            <a>
+            <a class="mobile-hide">
                 <img src="assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
-            <a>
+            <a class="mobile-hide">
                 <img src="assets/images/series-icon.svg" alt="SERIES" />
                 <span>SERIES</span>
             </a>
         </div>
+        
+        
         <div class="signOut">
             <img class="userImg" src="assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
