--- a/Max/index.html
+++ b/Max/index.html
@@ -105,7 +105,7 @@
             <h4>Recommended for You</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="detail.html">
+                    <a href="src/Inside out/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/87F1DCF36049558159913ADFD18A800DE1121771540033EC3A7651B8FE154CEB/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Inside Out" />
                     </a>
                 </div>
