--- a/Max/Inside out.html
+++ b/Max/Inside out.html
@@ -13,15 +13,15 @@
             <img src="assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
-            <a href="home.html">
+            <a href="index.html">
                 <img src="assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
-            <a>
+            <a class="mobile-hide">
                 <img src="assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
-            <a>
+            <a class="mobile-hide">
                 <img src="assets/images/series-icon.svg" alt="SERIES" />
                 <span>SERIES</span>
             </a>
